feat(encoding): reencode index2 batch to utf-8

--- a/print2226.html
+++ b/print2226.html
@@ -2,7 +2,7 @@
 <title>Два младенца</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=05C2309E-F45F1-C047DAFA by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:04:33 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='О вере. О перерождении. О новой жизни.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
