--- a/print2315.html
+++ b/print2315.html
@@ -2,7 +2,7 @@
 <title>Механизм материализации мысли</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=17C895A4-F4611-574C6567 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:28:58 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='материализация мысли'>
 <meta name="description" content=' ...или как формируется результат в системе.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
