--- a/print2365.html
+++ b/print2365.html
@@ -1,10 +1,10 @@
 <html>
-<title>«Íèôèãà ñåáå!», ñêàçàë ìàñòåð. Ïîìíèòå ýòó ïðèò÷ó-àíåêäîò?</title>
+<title>«Нифига себе!», сказал мастер. Помните эту притчу-анекдот?</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4CE9 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:58 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
-<meta name="description" content='Òàì îäèí ñàíüÿñèí î÷åíü õîòåë ó÷èòüñÿ ó îäíîãî ìàñòåðà äçýí, à òîìó òàê õîðîøî â ìåäèòàöèè, ÷òî îí ïûòàåòñÿ ñëèòü åãî ïîä áëàãîâèäíûì ïðåäëîãîì. Òî îäèí êîàí çàäàñò - à òîò ðàçãàäûâàåò, òî äðóãîé - òîò áåðåò è ïîêàçûâàåò. '>
+<meta name="description" content='Там один саньясин очень хотел учиться у одного мастера дзэн, а тому так хорошо в медитации, что он пытается слить его под благовидным предлогом. То один коан задаст - а тот разгадывает, то другой - тот берет и показывает. '>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,37 +14,37 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>«Íèôèãà ñåáå!», ñêàçàë ìàñòåð. Ïîìíèòå ýòó ïðèò÷ó-àíåêäîò?</h1><a href=index2365.html?id=F4CE9 class=slink>web-âåðñèÿ</a><p><span class='print'>Òàì îäèí ñàíüÿñèí î÷åíü õîòåë ó÷èòüñÿ ó îäíîãî ìàñòåðà äçýí, à òîìó òàê õîðîøî â ìåäèòàöèè, ÷òî îí ïûòàåòñÿ ñëèòü åãî ïîä áëàãîâèäíûì ïðåäëîãîì. Òî îäèí êîàí çàäàñò - à òîò ðàçãàäûâàåò, òî äðóãîé - òîò áåðåò è ïîêàçûâàåò.<br />
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>«Нифига себе!», сказал мастер. Помните эту притчу-анекдот?</h1><a href=index2365.html?id=F4CE9 class=slink>web-версия</a><p><span class='print'>Там один саньясин очень хотел учиться у одного мастера дзэн, а тому так хорошо в медитации, что он пытается слить его под благовидным предлогом. То один коан задаст - а тот разгадывает, то другой - тот берет и показывает.<br />
 <br />
-È òîãäà ìàñòåð ãîâîðèò:<br />
+И тогда мастер говорит:<br />
 <br />
-- Íó ÷òî æ, âîò òåáå ïîñëåäíåå çàäàíèå. Ñìîæåøü âûïîëíèòü - áóäó òåáÿ ó÷èòü äçåí, íå ñìîæåøü - ó íàñ òóò íå äëÿ íîâè÷êîâ. Çàâèñíè íà ïÿòü ëüå íàä çåìëåé.<br />
+- Ну что ж, вот тебе последнее задание. Сможешь выполнить - буду тебя учить дзен, не сможешь - у нас тут не для новичков. Зависни на пять лье над землей.<br />
 <br />
-Ñàíüÿñèíó íè÷åãî íå îñòàåòñÿ, ñëîâî ìàñòåðà - çàêîí. Íî ãðåõ íå ïîïûòàòüñÿ. È òîãäà îí ñàäèòñÿ â ìåäèòàöèþ, ðàññëàáëÿåòñÿ è... çàâèñàåò íà ïÿòü ëüå íàä çåìëåé.<br />
+Саньясину ничего не остается, слово мастера - закон. Но грех не попытаться. И тогда он садится в медитацию, расслабляется и... зависает на пять лье над землей.<br />
 <br />
-- Íèôèãà ñåáå! - ñêàçàë ìàñòåð.<br />
+- Нифига себе! - сказал мастер.<br />
 <br />
-&laquo;ÍÈÔÈÃÀ ÑÅÁÅ&raquo; ÑÊÀÇÀË ß...<br />
+&laquo;НИФИГА СЕБЕ&raquo; СКАЗАЛ Я...<br />
 <br />
-Ïðèìåðíî òàê æå ñåáÿ ÷óâñòâóþ è ÿ, êîãäà â î÷åðåäíîé ðàç êòî-òî èç ìîèõ êëèåíòîâ ïîêàçûâàåò òàêèå ðåçóëüòàòû, êîòîðûõ ó ìåíÿ è ó ñàìîãî-òî åùå íå áûëî.<br />
+Примерно так же себя чувствую и я, когда в очередной раз кто-то из моих клиентов показывает такие результаты, которых у меня и у самого-то еще не было.<br />
 <br />
-Ïåðâûé æå âåá-êóðñ Íàòàøè ñîáðàë 110 ÷åëîâåê è ïðèíåñ åé íåñêîëüêî ìèëëèîíîâ ðóáëåé (<a href="http://youtu.be/_yqLmzoiJjE">ñìîòðèòå âèäåî-èíòåðâüþ</a>). Ïðàâäà, Íàòàøà êóïèëà â çàïèñè âñå íàøè òðåíèíãè äëÿ òðåíåðîâ è ïðèåõàëà íà òðåíèíã â Àìñòåðäàì)<br />
+Первый же веб-курс Наташи собрал 110 человек и принес ей несколько миллионов рублей (<a href="http://youtu.be/_yqLmzoiJjE">смотрите видео-интервью</a>). Правда, Наташа купила в записи все наши тренинги для тренеров и приехала на тренинг в Амстердам)<br />
 <br />
-Ïàâåë Êà÷àãèí ïðîøåë òîëüêî òðåõäíåâíûé &laquo;Òðåíèíã íà ìèëëèîí&raquo;, è íå óñïåëè ïðîéòè è ñóòêè, êàê îí óæå çàðàáîòàë 60.000 ðóáëåé, ïðèìåíèâ âñåãî 3 íîâûå òåõíèêè (<a href="http://youtu.be/5qI--BbAm6Y">ðàññêàç Ïàâëà</a>).<br />
+Павел Качагин прошел только трехдневный &laquo;Тренинг на миллион&raquo;, и не успели пройти и сутки, как он уже заработал 60.000 рублей, применив всего 3 новые техники (<a href="http://youtu.be/5qI--BbAm6Y">рассказ Павла</a>).<br />
 <br />
-Ìàðíà æå ïðÿìî ìåæäó 2-ì è 3-ì äíåì &laquo;Ñàìîãî ëó÷øåãî òðåíèíãà&raquo; ïðîâåëà âå÷åðíèé ìàñòåð-êëàññ è ïîëó÷èëà òàêóþ êîíâåðñèþ íà ñâîé âåñüìà íåäåøåâûé êóðñ, êîòîðóþ ÿ âîîáùå íè ó êîãî íå âèäåë (<a href="http://youtu.be/_yqLmzoiJjE">ðàññêàç Ìàðíû</a>).<br />
+Марна же прямо между 2-м и 3-м днем &laquo;Самого лучшего тренинга&raquo; провела вечерний мастер-класс и получила такую конверсию на свой весьма недешевый курс, которую я вообще ни у кого не видел (<a href="http://youtu.be/_yqLmzoiJjE">рассказ Марны</a>).<br />
 <br />
-À Àíòîí äàæå íå ÿâëÿåòñÿ òðåíåðîì, è ó íåãî áûëî âñåãî 15 ìèíóò íà òåëåôîííûé ðàçãîâîð ñî ìíîé è ïîñòîÿííî ïðåðûâàþùàÿñÿ ñâÿçü... Íî ýòîãî åìó õâàòèëî ÷òîáû ñîáðàòü â Ñàìàðå ãðóïïó íà òðåíèíã âñåãî çà 1 íåäåëþ äàæå áåç èíòåðíåòà! Ôàêòè÷åñêè, îí ðóêàìè ñâîåãî òðåíåðà ïðîäàë íà 135.000 ðóáëåé çà 1,5 ÷àñà. (<a href="http://youtu.be/sr4AFJZMNzg">èñòîðèÿ Àíòîíà</a>)<br />
+А Антон даже не является тренером, и у него было всего 15 минут на телефонный разговор со мной и постоянно прерывающаяся связь... Но этого ему хватило чтобы собрать в Самаре группу на тренинг всего за 1 неделю даже без интернета! Фактически, он руками своего тренера продал на 135.000 рублей за 1,5 часа. (<a href="http://youtu.be/sr4AFJZMNzg">история Антона</a>)<br />
 <br />
-ÊÀÊ ÈÌ ÝÒÎ ÓÄÀËÎÑÜ?!?!?!<br />
+КАК ИМ ЭТО УДАЛОСЬ?!?!?!<br />
 <br />
-×òî òàêîãî îíè íàøëè â ìîèõ ïðîäóêòàõ, ÷åãî íå íàøëè äðóãèå?<br />
+Что такого они нашли в моих продуктах, чего не нашли другие?<br />
 <br />
-...èëè, ìîæåò, ó íèõ ïðîñòî íå áûëî âðåìåíè íà ñàìîäåÿòåëüíîñòü, è îíè âíåäðÿëè âñå òóïî ïî èíñòðóêöèè???<br />
+...или, может, у них просто не было времени на самодеятельность, и они внедряли все тупо по инструкции???<br />
 <br />
-Âû ìîæåòå ïðîâåðèòü ýòî ñàìè. Ñ 18 ïî 19 âñå íàøè òðåíèíãè íåâåðîÿòíî äîñòóïíû! Âîñïîëüçóéòåñü ñêèäêîé îò 71% äî 93% íà íàøåé ïðåäíîâîãîäíåé ðàñïðîäàæå è ïîëó÷èòå ÂÑÅ ÷òî âàì íóæíî äëÿ óñïåõà â òðåíèíãîâîì áèçíåñå!<br />
+Вы можете проверить это сами. С 18 по 19 все наши тренинги невероятно доступны! Воспользуйтесь скидкой от 71% до 93% на нашей предновогодней распродаже и получите ВСЕ что вам нужно для успеха в тренинговом бизнесе!<br />
 <br />
-<strong>Âîñïîëüçîâàòüñÿ: </strong><a href="../lp.nlping.ru/sale_all/indexd219.html"><strong>http://nlping.ru/sale</strong></a><br />
+<strong>Воспользоваться: </strong><a href="../lp.nlping.ru/sale_all/indexd219.html"><strong>http://nlping.ru/sale</strong></a><br />
 <br />
 <a name='vote'></a><script type='text/javascript'>
 function light(num){
@@ -68,16 +68,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setup10aa.html?id=F4CE9&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup1b0b.html?id=F4CE9&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup6cb7.html?id=F4CE9&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup1f56.html?id=F4CE9&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupc4a8.html?id=F4CE9&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup10aa.html?id=F4CE9&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup1b0b.html?id=F4CE9&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup6cb7.html?id=F4CE9&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup1f56.html?id=F4CE9&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupc4a8.html?id=F4CE9&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -128,21 +128,21 @@ var idcomments_post_url = 'F4CE9.html';
 		  fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'facebook-jssdk'));</script>
 
-<h3>Êîììåíòàðèè Facebook</h3>
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/F4CE9" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
-</script></span><p><a href=index2365.html?id=F4CE9 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</script></span><p><a href=index2365.html?id=F4CE9 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -203,7 +203,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -225,7 +225,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
