--- a/print286f.html
+++ b/print286f.html
@@ -1,10 +1,10 @@
 <html>
-<title>Ìàñòåð êîììóíèêàöèè</title>
+<title>Мастер коммуникации</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4CF5 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:30:57 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='Ìàñòåð êîììóíèêàöèè'>
-<meta name="description" content='Àóäèîçàïèñü ìàñòåð-êëàññà Åãîðà Áóëûãèíà â äåëîâîì êëóáå "Áëèæíèé êðóã" Ñåðãåÿ Çìååâà'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='Мастер коммуникации'>
+<meta name="description" content='Аудиозапись мастер-класса Егора Булыгина в деловом клубе "Ближний круг" Сергея Змеева'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,8 +14,8 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Ìàñòåð êîììóíèêàöèè</h1><a href=index286f.html?id=F4CF5 class=slink>web-âåðñèÿ</a><p><span class='print'><iframe scrolling="no" src="http://podfm.ru/getplayer/pod/?rss=http%3A%2F%2Fnlping.podfm.ru%2Frerlationship%2F12%2Frss.xml&amp;channel=embeddedplayer" style="border: none; overflow: hidden; width:452px; height: 53px;"></iframe><br />
-<a href="../files2.nlping.ru/free/MK.mp3">Ñêà÷àòü àóäèîçàïèñü</a><br />
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Мастер коммуникации</h1><a href=index286f.html?id=F4CF5 class=slink>web-версия</a><p><span class='print'><iframe scrolling="no" src="http://podfm.ru/getplayer/pod/?rss=http%3A%2F%2Fnlping.podfm.ru%2Frerlationship%2F12%2Frss.xml&amp;channel=embeddedplayer" style="border: none; overflow: hidden; width:452px; height: 53px;"></iframe><br />
+<a href="../files2.nlping.ru/free/MK.mp3">Скачать аудиозапись</a><br />
 <br />
 <br />
 <span style="font-size: 14px;">        <!-- VKontakte -->
@@ -86,21 +86,21 @@ var idcomments_post_url = 'F4CF5.html';
 		  fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'facebook-jssdk'));</script>
 
-<h3>Êîììåíòàðèè Facebook</h3>
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/F4CF5" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
-</script></span><p><a href=index286f.html?id=F4CF5 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</script></span><p><a href=index286f.html?id=F4CF5 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -161,7 +161,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -183,7 +183,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
