--- a/print28f6.html
+++ b/print28f6.html
@@ -2,7 +2,7 @@
 <title>Зачем людям НЛП?</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=8CF62ECC-F4603-E0E60912 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:09:41 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Действительно, зачем людям нужно НЛП? ...Или наука 7-го уровня.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
