--- a/index2bb9.html
+++ b/index2bb9.html
@@ -8,7 +8,7 @@
         <meta name="robots" content="index,follow" />
         <meta name="description" content="Ýòî ñàìûé ìîùíûé è ñàìûé ãëóáîêèé òðåíèíã èç âñåé ñåðèè!  Ïî÷åìó? Ïîäóìàéòå î òîì, êàêèå âîçìîæíîñòè Âàì îòêðûâàþòñÿ, êîãäà Âû ìîæåòå íàéòè îòâåò íà ëþáîé ñòðàòåãè÷åñêèé èëè æèçíåííî çíà÷èìûé äëÿ Âàñ âîïðîñ: 1. Çäîðîâüå è ïîëíîå îòñóòñòâèå áîëåçíåé; 2. Ñ÷àñòüå â ëþáâè è ëè÷íûõ îòíîøåíèÿõ; 3. Óñïåõ â áèçíåñå; 4. Äîñòèæåíèå ëþáûõ öåëåé è ðåøåíèå âñåõ ïðîáëåì" />
         <meta name="keywords" content="" />
-        <meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="rss/index.html" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
         
