--- a/index2faf.html
+++ b/index2faf.html
@@ -8,7 +8,7 @@
         <meta name="robots" content="index,follow" />
         <meta name="description" content="Ìû ïîéäåì íà óëèöó. Â îáåäåííûé ïåðåðûâ. Âèäèøü ýòèõ ëþäåé? Ñïåøàò êóäà-òî, òîðîïÿòñÿ. Íà ëèöàõ – îçàáî÷åííîñòü è âå÷íàÿ ñêëàäêà ìåæäó áðîâåé. Ñàìîå âàæíîå – óñïåòü ïåðâûì çàíÿòü ñâîáîäíîå ìåñòî â òðàíñïîðòå èëè êàôå. Íà ëèöàõ êàê áóäòî íàïèñàíî: «Íå òðîãàé ìåíÿ!»." />
         <meta name="keywords" content="" />
-        <meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="rss/index.html" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
         
