--- a/print205f.html
+++ b/print205f.html
@@ -2,7 +2,7 @@
 <title>Сила 4-й позиции восприятия</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=16403ABE-F42E9-0E7986EC by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:10:40 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Позиция "Мы".'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
