--- a/print20b0.html
+++ b/print20b0.html
@@ -2,7 +2,7 @@
 <title>Коллективный разум</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=9263E403-F45F9-305CF986 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:45 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='На космическом корабле Планета Земля пассажиров нет.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
