--- a/print2572.html
+++ b/print2572.html
@@ -2,7 +2,7 @@
 <title>Хватит думать, пора действовать!</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F48AC by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:02:10 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Чем отличаются успешные люди от всех остальных? Все живут в мире мыслей и эмоций, а те, кто движутся по лестнице успеха - в мире событийных потоков.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
