--- a/print2af8.html
+++ b/print2af8.html
@@ -1,10 +1,10 @@
 <html>
-<title>Ñåëô-ìåíåäæìåíò (ñàìîñîâåðøåíñòâîâàíèå)</title>
+<title>Селф-менеджмент (самосовершенствование)</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=8C0408EA-F4670-FC510EA9 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:06:24 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
-<meta name="description" content='Òåõíèêè ñàìîñòîÿòåëüíîãî ðåøåíèÿ âíóòðåííèõ çàäà÷, ðàçâèòèÿ íàâûêîâ è ëè÷íûõ êà÷åñòâ.'>
+<meta name="description" content='Техники самостоятельного решения внутренних задач, развития навыков и личных качеств.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,13 +14,13 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Ñåëô-ìåíåäæìåíò (ñàìîñîâåðøåíñòâîâàíèå)</h1><a href=index2af8.html?id=8C0408EA-F4670-FC510EA9 class=slink>web-âåðñèÿ</a><p><span class='print'><ul><li><h2><a href='360BA754-F466D-72D2651C.html'>Ëè÷íîñòíîå ðåäàêòèðîâàíèå</a></h2>Òåõíèêè ñàìîñòîÿòåëüíîãî ðåøåíèÿ âíóòðåííèõ çàäà÷ è "ðàñïðîãðàììèðîâàíèÿ" íåæåëàòåëüíûõ ñîñòîÿíèé è ïàòòåðíîâ.</li><li><h2><a href='index5212.html'>Ïðîãðàììèðîâàíèå óñïåøíîãî ïîâåäåíèÿ</a></h2>Ïðåäñòîèò âàæíàÿ âñòðå÷à? Ïðîãðàììèðóåì ñâîå ïîâåäåíèå íà óñïåøíûé ðåçóëüòàò. 1-ÿ è 2-ÿ ïîçèöèè âîñïðèÿòèÿ.</li></ul></span><p><a href=index2af8.html?id=8C0408EA-F4670-FC510EA9 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Селф-менеджмент (самосовершенствование)</h1><a href=index2af8.html?id=8C0408EA-F4670-FC510EA9 class=slink>web-версия</a><p><span class='print'><ul><li><h2><a href='360BA754-F466D-72D2651C.html'>Личностное редактирование</a></h2>Техники самостоятельного решения внутренних задач и "распрограммирования" нежелательных состояний и паттернов.</li><li><h2><a href='index5212.html'>Программирование успешного поведения</a></h2>Предстоит важная встреча? Программируем свое поведение на успешный результат. 1-я и 2-я позиции восприятия.</li></ul></span><p><a href=index2af8.html?id=8C0408EA-F4670-FC510EA9 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -81,7 +81,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -103,7 +103,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
