--- a/print2bc0.html
+++ b/print2bc0.html
@@ -1,10 +1,10 @@
 <html>
-<title>Ñïèðàëüíàÿ Äèíàìèêà</title>
+<title>Спиральная Динамика</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=716F4063-F45B9-4B9C778A by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 12:56:42 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='ñïèðàëüíàÿ äèíàìèêà'>
-<meta name="description" content='Ïîäáîðêà ìàòåðèàëîâ ïî Ñïèðàëüíîé Äèíàìèêå.'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='спиральная динамика'>
+<meta name="description" content='Подборка материалов по Спиральной Динамике.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,13 +14,13 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Ñïèðàëüíàÿ Äèíàìèêà</h1><a href=index2bc0.html?id=716F4063-F45B9-4B9C778A class=slink>web-âåðñèÿ</a><p><span class='print'><ul><li><h2><a href='F4DCE'>Êàê ìîòèâèðîâàòü è âäîõíîâëÿòü ëþäåé ñ ïîìîùüþ Ñïèðàëüíîé äèíàìèêè</a></h2>Áåñïëàòíûé âèäåî-òðåíèíã ïî Ñïèðàëüíîé äèíàìèêå.</li><li><h2><a href='F4C87.html'>Ñóòü ñïèðàëüíîé äèíàìèêè çà 3 ìèíóòû</a></h2>Íà êàêîì óðîâíå íàõîäèòñÿ Âàøå ëèäåðñòâî? Êàê îïðåäåëèòü, êàê ìûñëèò ÷åëîâåê, êàêîâû åãî ãëóáèííûå ìîòèâû è êàê îí ïîñòóïèò â òîì èëè èíîì ñëó÷àå?</li><li><h2><a href='11BD560D-F45FE-0BC6D576.html'>Ñïèðàëüíàÿ Äèíàìèêà Ãðåéâçà. Ïðèíöèïû Ñïèðàëüíîé Äèíàìèêè.</a></h2>Ïî ìàòåðèàëàì Ä. Áåêà è Ê. Êîâàíà.</li><li><h2><a href='D33444E2-F45BA-BF4A5D57.html'>Óðîâíè Ãðýéâçà. Èñòîðèÿ âîçíèêíîâåíèÿ.</a></h2>Ðàáîòà Ãðýéâçà è ïðåäïîñûëêè Ñïèðàëüíîé Äèíàìèêè.</li><li><h2><a href='A1F9DACB-F4616-890C8713.html'>Ñïèðàëüíàÿ Äèíàìèêà è ìûøëåíèå âòîðîãî ïîðÿäêà</a></h2>Ñîêðàùåííàÿ âåðñèÿ ãëàâû «Ñïèðàëüíàÿ äèíàìèêà: ïðèìåð âîëí áûòèÿ» èç êíèãè Êåíà Óèëáåðà «Èíòåãðàëüíàÿ ïñèõîëîãèÿ».</li><li><h2><a href='A47105BE-F45D0-E25D9CAB.html'>Ñïèðàëüíàÿ äèíàìèêà è ìûøëåíèå âòîðîãî ïîðÿäêà</a></h2>Ïîëíàÿ âåðñèÿ ãëàâû «Ñïèðàëüíàÿ äèíàìèêà: ïðèìåð âîëí áûòèÿ» èç êíèãè Êåíà Óèëáåðà «Èíòåãðàëüíàÿ ïñèõîëîãèÿ».</li><li><h2><a href='AE8AA57D-F45B5-93F63E8E.html'>Ñïèðàëüíàÿ äèíàìèêà (öåëè è öåííîñòè)</a></h2>Öåííîñòè, öåëè è ñïîñîáû ïðèñïîñîáëåíèÿ ïðåäñòàâèòåëåé êàæäîãî óðîâíÿ ñïèðàëüíîé äèíàìèêè.</li><li><h2><a href='432CBFC3-F44FD-314CDA54.html'>Ýâîëþöèÿ öåííîñòåé: Òåîðèÿ Ãðýéâñà è Ñïèðàëüíàÿ äèíàìèêà</a></h2>Êðàòêàÿ îçíàêîìèòåëüíàÿ ñòàòüÿ Àëåêñåÿ Êàïòåðåâà.</li><li><h2><a href='A3C1C587-F460A-E4D97F48.html'>Êîä Ñïèðàëüíîé Äèíàìèêè. Èíòåðâüþ ñ äîêòîðîì Äîíîì Áåêîì.</a></h2>Èíòåðâüþ.</li><li><h2><a href='D7190801-F4634-0E7186CF.html'>Óïðàâëåíèå èçìåíåíèÿìè ìåòîäàìè Ñïèðàëüíîé Äèíàìèêè</a></h2>Ýòàïû èçìåíåíèé, ÷åðåç êîòîðûå ïðîõîäèò ñèñòåìà, è 6 óñëîâèé, íåîáõîäèìûõ äëÿ óñïåøíûõ èçìåíåíèé.</li><li><h2><a href='F5576ACF-F4601-3A7A13DF.html'>Òèïîëîãèÿ ñèñòåì öåííîñòåé Êëýðà Ãðåéâçà</a></h2>Êðàòêàÿ õàðàêòåðèñòèêà êàæäîãî óðîâíÿ Ñïèðàëüíîé Äèíàìèêè â ïîíèìàíèè Ãðýéâçà.</li><li><h2><a href='EEB0610A-F4676-998B3D10.html'>AQAL: Ñïèðàëüíàÿ Äèíàìèêà è ñòàäèè ðàçâèòèÿ Ýãî</a></h2>Êîðåëëÿöèÿ Ñïèðàëüíîé Äèíàìèêè è ñòàäèé ðàçâèòèÿ Ýãî.</li><li><h2><a href='8C9BD84D-F4677-465F001F.html'>Òåñò ïî Ñïèðàëüíîé Äèíàìèêå</a></h2>Òåñò èç 30 âîïðîñîâ (ññûëêà).</li><li><h2><a href='F487E.html'>Ñïèðàëüíàÿ äèíàìèêà - îïàñíîå çíàíèå</a></h2>Äëÿ ÷åãî Ñïèðàëüíàÿ äèíàìèêà ìîæåò áûòü ïîëåçíà îáû÷íîìó ÷åëîâåêó?</li><li><h2><a href='F48A4.html'>Ôèîëåòîâûå - èçãíàíèå õóæå ñìåðòè</a></h2>Âòîðîé óðîâåíü Ñïèðàëüíîé äèíàìèêè - ôèîëåòîâûé. Êàêèå ìîòèâû äâèæóò ÷åëîâåêîì íà ýòîì ýòàïå ýâîëþöèè, êàê îí ìûñëèò è íà ÷òî ãîòîâ? À òàêæå, êàê ìû ìîæåì èñïîëüçîâàòü ýòî â ëèäåðñêèõ öåëÿõ è äëÿ ìàíèïóëÿöèè ìàññîâûì ñîçíàíèåì ýòîé êàòåãîðèè ëþäåé?</li><li><h2><a href='F48DB.html'>Ê ÷åðòó ïðàâèëà! Äàâàéòå íàäåðåì èì çàäíèöó!</a></h2>Òðåòèé óðîâåíü Ñïèðàëüíîé äèíàìèêè - "êðàñíûé". Êàê ìûñëÿò ëþäè ýòîãî óðîâíÿ, êàê èìè ìîæíî óïðàâëÿòü è ÷òî íè â êîåì ñëó÷àå íåëüçÿ äåëàòü â îáùåíèè ñ íèìè.</li><li><h2><a href='F4A6D.html'>7 ñòàäèé çðåëîñòè Ëèäåðà</a></h2>×åì ÿâëÿåòñÿ Âàøå ëèäåðñòâî ñåé÷àñ? È ÷òî áóäåò Âàøèì ñëåäóþùèì ýòàïîì ðàçâèòèÿ, êàê Ëèäåðà?</li><li><h2><a href='F4A7B.html'>3 ïåðåõîäíûå ïðîáëåìû ðàçâèòèÿ áèçíåñà</a></h2>Íèçêàÿ ýôôåêòèâíîñòü, ïðîáëåìû ñ ëþäüìè è ñëèøêîì âûñîêèå ðàñõîäû.  Êàê ðåøåíèÿ äàåò íàì Ñïèðàëüíàÿ Äèíàìèêà?</li></ul></span><p><a href=index2bc0.html?id=716F4063-F45B9-4B9C778A class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Спиральная Динамика</h1><a href=index2bc0.html?id=716F4063-F45B9-4B9C778A class=slink>web-версия</a><p><span class='print'><ul><li><h2><a href='F4DCE'>Как мотивировать и вдохновлять людей с помощью Спиральной динамики</a></h2>Бесплатный видео-тренинг по Спиральной динамике.</li><li><h2><a href='F4C87.html'>Суть спиральной динамики за 3 минуты</a></h2>На каком уровне находится Ваше лидерство? Как определить, как мыслит человек, каковы его глубинные мотивы и как он поступит в том или ином случае?</li><li><h2><a href='11BD560D-F45FE-0BC6D576.html'>Спиральная Динамика Грейвза. Принципы Спиральной Динамики.</a></h2>По материалам Д. Бека и К. Кована.</li><li><h2><a href='D33444E2-F45BA-BF4A5D57.html'>Уровни Грэйвза. История возникновения.</a></h2>Работа Грэйвза и предпосылки Спиральной Динамики.</li><li><h2><a href='A1F9DACB-F4616-890C8713.html'>Спиральная Динамика и мышление второго порядка</a></h2>Сокращенная версия главы «Спиральная динамика: пример волн бытия» из книги Кена Уилбера «Интегральная психология».</li><li><h2><a href='A47105BE-F45D0-E25D9CAB.html'>Спиральная динамика и мышление второго порядка</a></h2>Полная версия главы «Спиральная динамика: пример волн бытия» из книги Кена Уилбера «Интегральная психология».</li><li><h2><a href='AE8AA57D-F45B5-93F63E8E.html'>Спиральная динамика (цели и ценности)</a></h2>Ценности, цели и способы приспособления представителей каждого уровня спиральной динамики.</li><li><h2><a href='432CBFC3-F44FD-314CDA54.html'>Эволюция ценностей: Теория Грэйвса и Спиральная динамика</a></h2>Краткая ознакомительная статья Алексея Каптерева.</li><li><h2><a href='A3C1C587-F460A-E4D97F48.html'>Код Спиральной Динамики. Интервью с доктором Доном Беком.</a></h2>Интервью.</li><li><h2><a href='D7190801-F4634-0E7186CF.html'>Управление изменениями методами Спиральной Динамики</a></h2>Этапы изменений, через которые проходит система, и 6 условий, необходимых для успешных изменений.</li><li><h2><a href='F5576ACF-F4601-3A7A13DF.html'>Типология систем ценностей Клэра Грейвза</a></h2>Краткая характеристика каждого уровня Спиральной Динамики в понимании Грэйвза.</li><li><h2><a href='EEB0610A-F4676-998B3D10.html'>AQAL: Спиральная Динамика и стадии развития Эго</a></h2>Корелляция Спиральной Динамики и стадий развития Эго.</li><li><h2><a href='8C9BD84D-F4677-465F001F.html'>Тест по Спиральной Динамике</a></h2>Тест из 30 вопросов (ссылка).</li><li><h2><a href='F487E.html'>Спиральная динамика - опасное знание</a></h2>Для чего Спиральная динамика может быть полезна обычному человеку?</li><li><h2><a href='F48A4.html'>Фиолетовые - изгнание хуже смерти</a></h2>Второй уровень Спиральной динамики - фиолетовый. Какие мотивы движут человеком на этом этапе эволюции, как он мыслит и на что готов? А также, как мы можем использовать это в лидерских целях и для манипуляции массовым сознанием этой категории людей?</li><li><h2><a href='F48DB.html'>К черту правила! Давайте надерем им задницу!</a></h2>Третий уровень Спиральной динамики - "красный". Как мыслят люди этого уровня, как ими можно управлять и что ни в коем случае нельзя делать в общении с ними.</li><li><h2><a href='F4A6D.html'>7 стадий зрелости Лидера</a></h2>Чем является Ваше лидерство сейчас? И что будет Вашим следующим этапом развития, как Лидера?</li><li><h2><a href='F4A7B.html'>3 переходные проблемы развития бизнеса</a></h2>Низкая эффективность, проблемы с людьми и слишком высокие расходы.  Как решения дает нам Спиральная Динамика?</li></ul></span><p><a href=index2bc0.html?id=716F4063-F45B9-4B9C778A class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -81,7 +81,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -103,7 +103,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
