--- a/print2bda.html
+++ b/print2bda.html
@@ -2,7 +2,7 @@
 <title>Íàñòîÿùåå ÷óäî</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=2133DB58-F45F6-57CEAFC0 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:04:34 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='äçåí'>
 <meta name="description" content='Ïðèò÷à èç ñáîðíèêà 101 èñòîðèÿ äçåí.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
