--- a/print2c55.html
+++ b/print2c55.html
@@ -2,7 +2,7 @@
 <title>Сталкинг</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=4D6C2789-F45E3-C91EDA9D by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:10:55 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='новый код нлп, нлп'>
 <meta name="description" content='Техника, позволяющая распрограммировать бессознательные автоматизмы (паттерны).'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
