--- a/print2cbe.html
+++ b/print2cbe.html
@@ -2,7 +2,7 @@
 <title>История развития НЛП</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=22AC6A6A-F45CB-4CFC4CD1 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:28:58 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='История развития НЛП и появившихся из него направлений.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
