--- a/print2de5.html
+++ b/print2de5.html
@@ -1,10 +1,10 @@
 <html>
-<title>Î Íîâîì Êîäå ÍËÏ</title>
+<title>О Новом Коде НЛП</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=8015EE36-F4485-09664AAE by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:58:54 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='íîâûé êîä íëï'>
-<meta name="description" content='×òî òàêîå Íîâûé Êîä ÍËÏ è ÷òî òàêîå Èãðû Íîâîãî Êîäà ÍËÏ.'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='новый код нлп'>
+<meta name="description" content='Что такое Новый Код НЛП и что такое Игры Нового Кода НЛП.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,15 +14,15 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Î Íîâîì Êîäå ÍËÏ</h1><a href=index2de5.html?id=8015EE36-F4485-09664AAE class=slink>web-âåðñèÿ</a><p><span class='print'><P><ul><li><h2><a href='A62363D8-F42A8-FB94F979.html'>×òî òàêîå Íîâûé Êîä ÍËÏ</a></h2>Îñíîâíîå îòëè÷èå Íîâîãî Êîäà ÍËÏ â òîì, ÷òî ïðîèçâîäèìûå èçìåíåíèÿ ñîâåðøàþòñÿ ñ ïîìîùüþ áåññîçíàòåëüíîãî.</li><li><h2><a href='3B613833-F4244-5D2A14A0.html'>×òî òàêîå Èãðû Íîâîãî Êîäà ÍËÏ</a></h2>Êàêèì êðèòåðèÿì äîëæíà îòâå÷àòü Èãðà Íîâîãî Êîäà ÍËÏ - 6 îñíîâíûõ ïðèíöèïîâ, äàííûõ Äæîíîì Ãðèíäåðîì.</li><li><h2><a href='48E9829C-F45C2-708282EF.html'>Áàëàíñ, êîíãðóýíòíîñòü è Íîâûé Êîä ÍËÏ</a></h2>×åìó ó÷èò Íîâûé Êîä ÍËÏ íà ñàìîì äåëå.</li></ul> </P>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>О Новом Коде НЛП</h1><a href=index2de5.html?id=8015EE36-F4485-09664AAE class=slink>web-версия</a><p><span class='print'><P><ul><li><h2><a href='A62363D8-F42A8-FB94F979.html'>Что такое Новый Код НЛП</a></h2>Основное отличие Нового Кода НЛП в том, что производимые изменения совершаются с помощью бессознательного.</li><li><h2><a href='3B613833-F4244-5D2A14A0.html'>Что такое Игры Нового Кода НЛП</a></h2>Каким критериям должна отвечать Игра Нового Кода НЛП - 6 основных принципов, данных Джоном Гриндером.</li><li><h2><a href='48E9829C-F45C2-708282EF.html'>Баланс, конгруэнтность и Новый Код НЛП</a></h2>Чему учит Новый Код НЛП на самом деле.</li></ul> </P>
 <P>
-</span><p><a href=index2de5.html?id=8015EE36-F4485-09664AAE class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=index2de5.html?id=8015EE36-F4485-09664AAE class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -83,7 +83,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -105,7 +105,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
