--- a/print2faf.html
+++ b/print2faf.html
@@ -2,7 +2,7 @@
 <title>Маршрут. Часть третья. 3 ключевых навыка героя или Как обрести свою суперсилу</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4C22 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:07:32 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Мы пойдем на улицу. В обеденный перерыв. Видишь этих людей? Спешат куда-то, торопятся. На лицах – озабоченность и вечная складка между бровей. Самое важное – успеть первым занять свободное место в транспорте или кафе. На лицах как будто написано: «Не трогай меня!».'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
